docker-push/kube-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-sample
spec:
  ports:
  - port: 80
  selector:
    run: python-sample
  type: ClusterIP
status:
  loadBalancer: {}
